# localstack-docker-debug

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  diagnose.sh  docker-compose.yml  go.mod  go.sum  main.go  probe.sh  run.sh  setup.cfg  shell.nix
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  docker-publish.yml
dockerdebug/: __main__.py  connectivity.py  constants.py  diagnose.py  probe.py  render.py
dockerdebug/templates/: base.html  index.html
scenarios/: README.md  bootstrap.sh
scenarios/1-missing-network-configuration/: .gitignore  Dockerfile  README.md  go.mod  main.go  setup.sh  teardown.sh  vars.sh
scenarios/1-missing-network-configuration/cdk/: package-lock.json  package.json
scenarios/2-no-subdomain-support/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  setup.sh  teardown.sh  test.sh
scenarios/2-no-subdomain-support/cdk/: package-lock.json  package.json
scenarios/2-no-subdomain-support/cdk/lib/: cdk-stack.ts
scenarios/3-urls-with-localhost/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  setup.sh  test.sh
scenarios/3-urls-with-localhost/cdk/: package-lock.json  package.json
scenarios/3-urls-with-localhost/cdk/lib/: cdk-stack.ts
scenarios/4-ls-in-network-not-target/: README.md  go.mod  setup.sh  teardown.sh  vars.sh
scenarios/4-ls-in-network-not-target/cdk/: package-lock.json  package.json
scenarios/4-ls-in-network-not-target/cdk/lib/: cdk-stack.handler.ts
tests/: test_basic.py  test_foo.py
