[metadata]
name = dockerdebug
description = A debug helper for docker networks
url = 
version = attr: dockerdebug.__version__
author = Simon Walker
author_email = simon.walker@localstack.cloud
license = Apache License 2.0
# classifiers =
#     Programming Language :: Python :: 3.10
#     License :: OSI Approved :: Apache Software License
#     Topic :: Internet
#     Topic :: Software Development :: Testing
#     Topic :: System :: Emulators

[options]
packages=find:

# dependencies that are required for the cli (via pip install localstack)
install_requires =
    dnspython>=2.3.0,<2.4.0
    dnslib>=0.9.23,<0.10.0
    docker>=6.1.3,<6.2.0
    requests>=2.31.0,<2.32.0
    click>=8.1.6,<8.2.0
    graphviz>=0.20.1,<0.21.0
    flask>=2.2.5,<2.3.0

[options.extras_require]
# required to actually run localstack on the host
dev =
    pytest
